[gd_scene load_steps=3 format=3 uid="uid://cpj2ib6h0pj21"]

[ext_resource type="Script" path="res://menus/settings_menu.gd" id="1_h5ohy"]

[sub_resource type="LabelSettings" id="LabelSettings_y3fs0"]
font_size = 52

[node name="Menu" type="Control" node_paths=PackedStringArray("mouse_sensitivity_value_label", "mouse_sensitivity_slider", "volume_value_label", "volume_slider")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h5ohy")
mouse_sensitivity_value_label = NodePath("VBoxContainer/MouseSensitivityContainer/HBoxContainer/MouseSensitivityLabel")
mouse_sensitivity_slider = NodePath("VBoxContainer/MouseSensitivityContainer/MouseSensitivitySlider")
volume_value_label = NodePath("VBoxContainer/VolumeContainer/HBoxContainer/VolumeLabel")
volume_slider = NodePath("VBoxContainer/VolumeContainer/VolumeSlider")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -62.5
offset_right = 22.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_y3fs0")
horizontal_alignment = 1

[node name="MouseSensitivityContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MouseSensitivityContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/MouseSensitivityContainer/HBoxContainer"]
layout_mode = 2
text = "Mouse Sensitivity:"

[node name="MouseSensitivityLabel" type="Label" parent="VBoxContainer/MouseSensitivityContainer/HBoxContainer"]
layout_mode = 2
text = "1.0"

[node name="MouseSensitivitySlider" type="HSlider" parent="VBoxContainer/MouseSensitivityContainer"]
layout_mode = 2
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="VolumeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/VolumeContainer/HBoxContainer"]
layout_mode = 2
text = "Volume:"

[node name="VolumeLabel" type="Label" parent="VBoxContainer/VolumeContainer/HBoxContainer"]
layout_mode = 2
text = "80"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
min_value = -60.0
max_value = 0.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="VBoxContainer/MouseSensitivityContainer/MouseSensitivitySlider" to="." method="_on_mouse_sensitivity_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VolumeContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
